--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-hook-form": "^7.9.0",
+    "react-scripts": "^1.1.5",
     "react-scroll": "^1.8.2",
     "react-typewriter-effect": "^1.0.2",
     "scroll": "^3.0.1",
